--- a/css/style.css
+++ b/css/style.css
@@ -364,4 +364,240 @@ body {
 }
 
 /* endof about us */
-/* end of navbar */
+/* common header */
+.common-header {
+  padding: 5rem;
+  text-align: center;
+  color: #b85d1c;
+}
+.common-heading {
+  font-size: 4rem;
+  font-weight: 300;
+  letter-spacing: 0.2rem;
+}
+.small-underline {
+  width: 9rem;
+  height: 0.1rem;
+  background-color: #b85d1c;
+  margin: 0 auto 1rem auto;
+}
+.big-underline {
+  width: 20rem;
+  height: 0.1rem;
+  background-color: #b85d1c;
+  margin: auto;
+}
+/* end of common header */
+/* rooms */
+.rooms {
+  margin-left: 8rem;
+}
+.rooms-cards-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+.room-card {
+  width: 60rem;
+  margin: 5rem;
+  background-color: #15141b;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.5);
+}
+.room-img {
+  width: 100%;
+}
+
+.room-content {
+  color: #ddd;
+  padding: 2rem;
+}
+.room-card-heading {
+  margin: 0;
+  font-size: 3rem;
+  font-weight: 300;
+}
+.room-card-paragraph {
+  font-size: 1.5rem;
+  color: #777;
+}
+.room-price {
+  font-size: 5rem;
+  font-weight: 300;
+  text-align: right;
+  margin: 0;
+}
+.room-card-btn {
+  width: 15rem;
+  padding: 1.5rem 1rem;
+  font-family: Montserrat, sans-serif;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  color: #b85d1c;
+  background-color: transparent;
+  outline: none;
+  border: 0.1rem solid #b85d1c;
+  cursor: pointer;
+  border-radius: 10rem;
+}
+.rooms-btn-wrapper {
+  text-align: center;
+}
+.rooms-btn {
+  width: 20rem;
+  padding: 1.5rem 1rem;
+  margin: 4rem 0;
+  background-color: transparent;
+  text-transform: uppercase;
+  color: #b85d1c;
+  outline: none;
+  border: 0.2rem solid #b85d1c;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  box-shadow: 0 1.5rem 6rem rgba(0, 0, 0, 0.3);
+  transition: all 0.2s;
+}
+.rooms-btn:hover {
+  color: #ddd;
+  background-color: #b85d1c;
+}
+/* end of rooms */
+/* customers*/
+
+.customers {
+  margin-left: 8rem;
+  padding-bottom: 1rem;
+  background-color: #15141b;
+}
+.customers-paragraph {
+  font-size: 1.8rem;
+  color: #ddd;
+  width: 50%;
+  margin: 2rem auto 6rem auto;
+}
+.customers-card-wrapper {
+  display: flex;
+  justify-content: space-evenly;
+}
+.customer-card {
+  background-color: #eee;
+  width: 60rem;
+  display: flex;
+}
+.customer-image-wrapper {
+  margin: auto 0;
+}
+.customer-image {
+  width: 20rem;
+  margin-left: -1.3rem;
+}
+.customer-info {
+  padding: 0 2rem;
+}
+.customer-fullname {
+  font-size: 2rem;
+  font-weight: 300;
+  margin-bottom: 0;
+}
+.customer-paragraph-1 {
+  font-size: 1.2rem;
+  font-style: italic;
+  color: #b85d1c;
+}
+.customer-paragraph-2 {
+  font-size: 1.3rem;
+  font-style: italic;
+}
+/* end of cutomers */
+/* footer */
+.footer {
+  margin-left: 8rem;
+}
+.main-part {
+  display: flex;
+  justify-content: space-between;
+  background-color: #1c1c1c;
+  padding: 4rem;
+}
+.footer-heading {
+  font-size: 2rem;
+  font-weight: 300;
+  color: goldenrod;
+  margin: 1rem 0 3rem 0;
+}
+.footer-list {
+  list-style: none;
+  padding: 0;
+}
+.footer-list-item {
+  margin-bottom: 2rem;
+}
+.footer-list-link {
+  font-size: 1.4rem;
+  text-decoration: none;
+  color: #bbb;
+}
+.contact p {
+  font-size: 1.5rem;
+  color: #bbb;
+  margin-bottom: 4rem;
+}
+.footer-form {
+  display: flex;
+}
+.footer-input {
+  width: 25rem;
+  padding: 1rem;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 1.8rem;
+  color: #444;
+  outline: none;
+}
+.footer-btn {
+  padding: 1rem;
+  background-color: #b85d1c;
+  color: #ddd;
+  border: none;
+}
+.gallery {
+  max-width: 45rem;
+}
+.image-wrapper {
+  width: 12rem;
+  margin: 0.4rem;
+  overflow: hidden;
+}
+
+.footer-image {
+  width: 100%;
+  transition: all 0.5s;
+  height: 100%;
+  backface-visibility: hidden;
+}
+.gallery-images {
+  display: flex;
+  flex-wrap: wrap;
+}
+.footer-image:hover {
+  transform: scale(2);
+  opacity: 0.8;
+}
+.creator-part {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #111;
+  padding: 0 4rem;
+}
+.copyright-text {
+  font-size: 1.3rem;
+  color: #aaa;
+}
+.text-right {
+  font-size: 1.4rem;
+  color: #bbb;
+}
+.text-right i {
+  font-size: 2rem;
+  margin: 0.5rem;
+  color: tomato;
+}
+.text-right /* end of footer */ /* end of navbar */ ;;
