--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ body {
   justify-content: space-between;
   align-items: center;
   transition: left 0.7s ease-in-out;
+  z-index: 5;
 }
 .navigation-heading {
   font-family: "Josefin Sans", sans-serif;
@@ -199,6 +200,7 @@ body {
   width: 2.5rem;
 }
 /* end of navigation */
+/* end of navbar */
 /* header */
 .header {
   margin-left: 8rem;
@@ -267,6 +269,7 @@ body {
   }
 }
 /* end of header */
+
 /* about us */
 .about-us {
   margin-left: 8rem;
@@ -600,4 +603,102 @@ body {
   margin: 0.5rem;
   color: tomato;
 }
-.text-right /* end of footer */ /* end of navbar */ ;;
+/* end of footer */
+
+@media (max-width: 1400px) {
+  .customers-card-wrapper {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .customer-card:first-child {
+    margin-bottom: 3rem;
+  }
+  .main-part {
+    flex-direction: column;
+  }
+  .footer-list {
+    display: flex;
+  }
+  .footer-list-item {
+    margin-right: 3rem;
+  }
+}
+
+@media (max-width: 1200px) {
+  .about-us {
+    flex-direction: column;
+    padding-bottom: 20rem;
+  }
+  .about-us-content {
+    margin-bottom: 30rem;
+  }
+  .image {
+    width: 25rem;
+  }
+}
+@media (max-width: 900px) {
+  .banner {
+    text-align: center;
+  }
+  .banner-heading {
+    font-size: 4.7rem;
+  }
+  .banner-paragraph {
+    font-size: 2.6rem;
+  }
+  .banner-button {
+    width: 16rem;
+    font-size: 1.5rem;
+  }
+}
+@media (max-width: 750px) {
+  .customer-card {
+    flex-direction: column;
+    width: 20rem;
+  }
+  .customer-image {
+    margin-left: 0;
+  }
+  .footer-list {
+    display: block;
+  }
+  .creator-part {
+    flex-direction: column;
+    margin: auto;
+    text-align: center;
+  }
+  .copyright-text {
+    order: 1;
+  }
+}
+@media (max-width: 500px) {
+  .navigation {
+    width: 28rem;
+  }
+  .navigation-search-input {
+    width: 20rem;
+  }
+  .image {
+    width: 13rem;
+  }
+  .about-us {
+    padding-bottom: 15rem;
+  }
+  .about-us-heading {
+    font-size: 2.5rem;
+    text-align: center;
+  }
+  .subheading {
+    font-size: 2rem;
+    text-align: center;
+  }
+  .about-us-content {
+    padding: 5rem;
+    margin-bottom: 15rem;
+  }
+  .hotel-heading {
+    font-size: 2rem;
+    margin: auto 0;
+  }
+}
